[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control" type="Control" parent="."]
anchor_bottom = 1.0
margin_right = 200.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_bottom = 1.0
margin_right = 200.0
color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="General" type="Label" parent="Control/VBoxContainer"]
margin_right = 118.0
margin_bottom = 14.0
text = "General."

[node name="Name" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 18.0
margin_right = 118.0
margin_bottom = 32.0

[node name="ShipNameLabel" type="Label" parent="Control/VBoxContainer/Name"]
margin_right = 77.0
margin_bottom = 14.0
text = "Ship Name :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipName" type="Label" parent="Control/VBoxContainer/Name"]
margin_left = 81.0
margin_right = 81.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Class" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 36.0
margin_right = 118.0
margin_bottom = 50.0

[node name="ShipClassLabel" type="Label" parent="Control/VBoxContainer/Class"]
margin_right = 72.0
margin_bottom = 14.0
text = "Ship Class :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipClass" type="Label" parent="Control/VBoxContainer/Class"]
margin_left = 76.0
margin_right = 76.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Category" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 54.0
margin_right = 118.0
margin_bottom = 68.0

[node name="ShipCategoryLabel" type="Label" parent="Control/VBoxContainer/Category"]
margin_right = 94.0
margin_bottom = 14.0
text = "Ship Category :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipCategory" type="Label" parent="Control/VBoxContainer/Category"]
margin_left = 98.0
margin_right = 98.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mass" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 72.0
margin_right = 118.0
margin_bottom = 86.0

[node name="ShipMassLabel" type="Label" parent="Control/VBoxContainer/Mass"]
margin_right = 72.0
margin_bottom = 14.0
text = "Ship Mass :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipMass" type="Label" parent="Control/VBoxContainer/Mass"]
margin_left = 76.0
margin_right = 76.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Commercial" type="Label" parent="Control/VBoxContainer"]
margin_top = 90.0
margin_right = 118.0
margin_bottom = 104.0
text = "Commercial."

[node name="Cost" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 108.0
margin_right = 118.0
margin_bottom = 122.0

[node name="ShipCostLabel" type="Label" parent="Control/VBoxContainer/Cost"]
margin_right = 36.0
margin_bottom = 14.0
text = "Cost :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipCost" type="Label" parent="Control/VBoxContainer/Cost"]
margin_left = 40.0
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Devaluation" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 126.0
margin_right = 118.0
margin_bottom = 140.0

[node name="ShipDevaluationLabel" type="Label" parent="Control/VBoxContainer/Devaluation"]
margin_right = 114.0
margin_bottom = 14.0
text = "Deval Per Month :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipDevaluation" type="Label" parent="Control/VBoxContainer/Devaluation"]
margin_left = 118.0
margin_right = 118.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CurrentCost" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 144.0
margin_right = 118.0
margin_bottom = 158.0

[node name="ShipCurrentCostLabel" type="Label" parent="Control/VBoxContainer/CurrentCost"]
margin_right = 87.0
margin_bottom = 14.0
text = "Current Cost :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipCurrentCost" type="Label" parent="Control/VBoxContainer/CurrentCost"]
margin_left = 91.0
margin_right = 91.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Capacities" type="Label" parent="Control/VBoxContainer"]
margin_top = 162.0
margin_right = 118.0
margin_bottom = 176.0
text = "Capacities."

[node name="Seat" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 180.0
margin_right = 118.0
margin_bottom = 194.0

[node name="ShipSeatLabel" type="Label" parent="Control/VBoxContainer/Seat"]
margin_right = 35.0
margin_bottom = 14.0
text = "Seat :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipSeat" type="Label" parent="Control/VBoxContainer/Seat"]
margin_left = 39.0
margin_right = 39.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Freight" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 198.0
margin_right = 118.0
margin_bottom = 212.0

[node name="ShipFreightLabel" type="Label" parent="Control/VBoxContainer/Freight"]
margin_right = 52.0
margin_bottom = 14.0
text = "Freight :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipFreight" type="Label" parent="Control/VBoxContainer/Freight"]
margin_left = 56.0
margin_right = 56.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modifier" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 216.0
margin_right = 118.0
margin_bottom = 230.0

[node name="ShipModifierLabel" type="Label" parent="Control/VBoxContainer/Modifier"]
margin_right = 68.0
margin_bottom = 14.0
text = "Modifiers :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipModifier" type="Label" parent="Control/VBoxContainer/Modifier"]
margin_left = 72.0
margin_right = 72.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carburant" type="Label" parent="Control/VBoxContainer"]
margin_top = 234.0
margin_right = 118.0
margin_bottom = 248.0
text = "Carburant."

[node name="Fuel" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 252.0
margin_right = 118.0
margin_bottom = 266.0

[node name="ShipFuelLabel" type="Label" parent="Control/VBoxContainer/Fuel"]
margin_right = 35.0
margin_bottom = 14.0
text = "Fuel :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipFuel" type="Label" parent="Control/VBoxContainer/Fuel"]
margin_left = 39.0
margin_right = 39.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 270.0
margin_right = 118.0
margin_bottom = 284.0

[node name="ShipEnergyLabel" type="Label" parent="Control/VBoxContainer/Energy"]
margin_right = 50.0
margin_bottom = 14.0
text = "Energy :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipEnergy" type="Label" parent="Control/VBoxContainer/Energy"]
margin_left = 54.0
margin_right = 54.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}
